# MusicPlayer

./: CMakeLists.txt  Main.qml  SongDetails.h  decodemusicdata.cpp  decodemusicdata.h  main.cpp  playlist.h  playlists.cpp  playlists.h
DecodeMusicData/: decodemusicdata.cpp  decodemusicdata.h
MusicPlayer/: musicplayer.cpp  musicplayer.h
PlaySong/: playsong.cpp  playsong.h
Player/: GlobalObject.qml  Player.qml  Player.qml.autosave  global.qml  test.qml
Player/PlayerContent/: MusicLibrary.qml  PlayLists.qml  PlayerContent.qml  SinglePlayList.qml
Player/PlayerController/: PlayerController.qml
Player/PlayerLeftBar/: PlayerLeftBar.qml
Player/SharedComponents/: ButtonComponent.qml
